# unitree_h1_point-by-point_programming_ws

./: .gitignore  README.md  install_dependensies.bash
button_analyzer/: package.xml  setup.cfg  setup.py
button_analyzer/button_analyzer/: button_analyzer_with_hands.py  button_analyzer_without_hands.py
button_analyzer/buttons_server/: package.xml  setup.py
button_analyzer/resource/: 1_offer_docs_with_hands.txt  1_offer_hand_with_hands.txt  2_grip_docs_with_hands.txt  2_shake_hand_with_hands.txt  3_hold_docs_with_hands.txt  4_give_docs_with_hands.txt  5_release_docs_with_hands.txt  attention_without_hands.txt  json_pack  photo_with_hands.txt  selfie_with_hands.txt  wave_without_hands.txt
buttons_server/: package.xml  setup.cfg  setup.py
buttons_server/buttons_server/: hear_server.py  server_stand_up_with_hands.py  server_stand_up_without_hands.py
buttons_server/resource/: html_skeleton_with_hands.html
completed_scripts_point-by-point_programming/: package.xml  setup.cfg  setup.py
completed_scripts_point-by-point_programming/launch/: control_by_buttons.launch.py  control_by_buttons_with_hands.launch.py  control_by_buttons_without_hands.launch.py
completed_srcipts_point-by-point_programming/: package.xml  setup.cfg  setup.py
completed_srcipts_point-by-point_programming/launch/: control_by_buttons_with_hands.launch.py  control_by_buttons_without_hands.launch.py
macros_writer/: package.xml  setup.cfg  setup.py
macros_writer/macros_writer/: macros_writer.py
position_reader/: package.xml  setup.cfg  setup.py
position_reader/position_reader/: position_reader_node.py
position_reader/resource/: pose_test.txt
position_writer/: package.xml  setup.cfg  setup.py
position_writer/position_writer/: position_writer_node.py
radon_reports/: cc_report.txt  halstead_report.txt  mi_report.txt  raw_report.txt
slider_control/: package.xml  setup.cfg  setup.py
slider_control/slider_control/: slider_control_node.py
(+5 files in other folders)
