<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>buttons_server</name>
  <version>1.0.0</version>
  <description>This package allows check a web page for robot control. ' \
    '"hear_server" in this package send to topic "button_status" which button is pressed. ' \
    'Buttons located on a web page. Web page is started by "server_stand_up' </description>
  <maintainer email="sashagrachev2005@gmail.com">banana-killer</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
